--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Audiophile</title>
+    <meta property="og:title" content="Audiophile" />
+    <meta property="og:description" content="Bringing you the best audio gear" />
+    <meta property="og:image" content="/crossposting.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Audiophile" />
+    <meta property="twitter:description" content="Bringing you the best audio gear" />
+    <meta property="twitter:image" content="/crossposting.jpg" />
   </head>
   <body>
     <div id="root"></div>
